Created a somewhat inefficient world generation algorithm. The world is divided into a grid of 50x50 squares and each square may or may not be blocked by an obstacle.

--- a/ants.cbp
+++ b/ants.cbp
@@ -92,6 +92,8 @@
 		<Unit filename="components.cpp" />
 		<Unit filename="components.h" />
 		<Unit filename="creature.h" />
+		<Unit filename="debug.cpp" />
+		<Unit filename="debug.h" />
 		<Unit filename="entities.cpp" />
 		<Unit filename="entities.h" />
 		<Unit filename="game.cpp" />
