--- a/ants.cbp
+++ b/ants.cbp
@@ -101,6 +101,7 @@
 		<Unit filename="main.cpp" />
 		<Unit filename="navigation.cpp" />
 		<Unit filename="navigation.h" />
+		<Unit filename="player.h" />
 		<Unit filename="sequence.cpp" />
 		<Unit filename="sequence.h" />
 		<Unit filename="sprites.cpp" />
