Can now remove walls from navigation mesh

--- a/ants.cbp
+++ b/ants.cbp
@@ -95,10 +95,14 @@
 		<Unit filename="creature.h" />
 		<Unit filename="debug.cpp" />
 		<Unit filename="debug.h" />
+		<Unit filename="enemyAssemblers.cpp" />
+		<Unit filename="enemyAssemblers.h" />
 		<Unit filename="entities.cpp" />
 		<Unit filename="entities.h" />
 		<Unit filename="fog.cpp" />
 		<Unit filename="fog.h" />
+		<Unit filename="friendlyAssemblers.cpp" />
+		<Unit filename="friendlyAssemblers.h" />
 		<Unit filename="game.cpp" />
 		<Unit filename="game.h" />
 		<Unit filename="main.cpp" />
@@ -106,6 +110,15 @@
 		<Unit filename="navigation.h" />
 		<Unit filename="player.cpp" />
 		<Unit filename="player.h" />
+		<Unit filename="resources/shaders/fragment/fragmentShader.h" />
+		<Unit filename="resources/shaders/fragment/outlineShader.h" />
+		<Unit filename="resources/shaders/fragment/paintShader.h" />
+		<Unit filename="resources/shaders/fragment/simpleFragment.h" />
+		<Unit filename="resources/shaders/fragment/wordFragment.h" />
+		<Unit filename="resources/shaders/vertex/polygonVertex.h" />
+		<Unit filename="resources/shaders/vertex/simpleVertex.h" />
+		<Unit filename="resources/shaders/vertex/vertexShader.h" />
+		<Unit filename="resources/shaders/vertex/wordVertex.h" />
 		<Unit filename="sequence.cpp" />
 		<Unit filename="sequence.h" />
 		<Unit filename="sprites.cpp" />
