--- a/ants.cbp
+++ b/ants.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="mingw64" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-std=c++17" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -30,11 +31,13 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-std=c++1z" />
 			<Add directory="../../SDL stuff/SDL2-2.0.8/x86_64-w64-mingw32/include/SDL2" />
 			<Add directory="../../glew-2.0.0/include/GL" />
 			<Add directory="../../glm/glm" />
 			<Add directory="../../freetype-2.9.1/include" />
 			<Add directory="../../resources" />
+			<Add directory="../../dirent-1.23.2/include" />
 		</Compiler>
 		<Linker>
 			<Add option="-lmingw32 -lSDL2main -lSDL2 -lopengl32" />
@@ -49,6 +52,8 @@
 		<Unit filename="../../resources/FreeTypeHelper.h" />
 		<Unit filename="../../resources/SDLhelper.cpp" />
 		<Unit filename="../../resources/SDLhelper.h" />
+		<Unit filename="../../resources/components.cpp" />
+		<Unit filename="../../resources/components.h" />
 		<Unit filename="../../resources/geometry.cpp" />
 		<Unit filename="../../resources/geometry.h" />
 		<Unit filename="../../resources/glGame.cpp" />
@@ -58,44 +63,61 @@
 		<Unit filename="../../resources/render.cpp" />
 		<Unit filename="../../resources/render.h" />
 		<Unit filename="../../resources/shaders/fragment/fragmentShader.h">
-			<Option target="Release" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="../../resources/shaders/fragment/outlineShader.h">
-			<Option target="Release" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="../../resources/shaders/fragment/paintShader.h">
-			<Option target="Release" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="../../resources/shaders/fragment/simpleFragment.h">
-			<Option target="Release" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="../../resources/shaders/fragment/wordFragment.h">
-			<Option target="Release" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="../../resources/shaders/vertex/polygonVertex.h">
-			<Option target="Release" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="../../resources/shaders/vertex/simpleVertex.h">
-			<Option target="Release" />
+			<Option target="Debug" />
 		</Unit>
 		<Unit filename="../../resources/shaders/vertex/vertexShader.h">
-			<Option target="Release" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="../../resources/shaders/vertex/wordVertex.h">
-			<Option target="Release" />
+			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
 		<Unit filename="../../resources/stb_image.h" />
 		<Unit filename="../../resources/vanilla.cpp" />
 		<Unit filename="../../resources/vanilla.h" />
+		<Unit filename="../../resources/wxWidgetHelper.cpp">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="../../resources/wxWidgetHelper.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
 		<Unit filename="animation.cpp" />
 		<Unit filename="animation.h" />
-		<Unit filename="antManager.cpp" />
-		<Unit filename="antManager.h" />
-		<Unit filename="ants.cpp" />
-		<Unit filename="ants.h" />
-		<Unit filename="components.cpp" />
-		<Unit filename="components.h" />
-		<Unit filename="creature.h" />
+		<Unit filename="antManager.cpp">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="antManager.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="ants.cpp">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="ants.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="components.h">
+			<Option target="&lt;{~None~}&gt;" />
+		</Unit>
+		<Unit filename="creature.h">
+			<Option target="Release" />
+		</Unit>
 		<Unit filename="debug.cpp" />
 		<Unit filename="debug.h" />
 		<Unit filename="effects.cpp" />
@@ -115,18 +137,39 @@
 		<Unit filename="navigation.h" />
 		<Unit filename="player.cpp" />
 		<Unit filename="player.h" />
-		<Unit filename="resources/shaders/fragment/fragmentShader.h" />
-		<Unit filename="resources/shaders/fragment/outlineShader.h" />
-		<Unit filename="resources/shaders/fragment/paintShader.h" />
-		<Unit filename="resources/shaders/fragment/simpleFragment.h" />
-		<Unit filename="resources/shaders/fragment/wordFragment.h" />
-		<Unit filename="resources/shaders/vertex/polygonVertex.h" />
-		<Unit filename="resources/shaders/vertex/simpleVertex.h" />
-		<Unit filename="resources/shaders/vertex/vertexShader.h" />
-		<Unit filename="resources/shaders/vertex/wordVertex.h" />
+		<Unit filename="resources/shaders/fragment/fragmentShader.h">
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="resources/shaders/fragment/outlineShader.h">
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="resources/shaders/fragment/paintShader.h">
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="resources/shaders/fragment/simpleFragment.h">
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="resources/shaders/fragment/wordFragment.h">
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="resources/shaders/vertex/polygonVertex.h">
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="resources/shaders/vertex/simpleVertex.h">
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="resources/shaders/vertex/vertexShader.h">
+			<Option target="Release" />
+		</Unit>
+		<Unit filename="resources/shaders/vertex/wordVertex.h">
+			<Option target="Release" />
+		</Unit>
 		<Unit filename="sequence.cpp" />
 		<Unit filename="sequence.h" />
-		<Unit filename="shop.h" />
+		<Unit filename="tiles.cpp" />
+		<Unit filename="tiles.h" />
+		<Unit filename="weaponAssemblers.cpp" />
+		<Unit filename="weaponAssemblers.h" />
 		<Unit filename="world.cpp" />
 		<Unit filename="world.h" />
 		<Unit filename="worldMap.cpp" />
