first update out of school: Entities can now no longer be pushed out of the level and the player can't move out of the level. Implemented a template based system that allows for easy static UnitAssembler creation

--- a/ants.cbp
+++ b/ants.cbp
@@ -112,6 +112,8 @@
 		<Unit filename="ants.h">
 			<Option target="&lt;{~None~}&gt;" />
 		</Unit>
+		<Unit filename="assemblerInit.cpp" />
+		<Unit filename="assemblerInit.h" />
 		<Unit filename="creature.h">
 			<Option target="Release" />
 		</Unit>
